--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.github.sachinnagpal</groupId>
   <artifactId>se-test-demo</artifactId>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.2</version>
   <packaging>jar</packaging>
   <name>se-test-demo</name>
   <url>https://github.com/sachinnagpal/setestdemo</url>
@@ -25,6 +23,7 @@
     <connection>scm:git:git@github.com:sachinnagpal/setestdemo.git</connection>
     <developerConnection>scm:git:ssh://github.com:sachinnagpal/setestdemo.git</developerConnection>
     <url>https://github.com/sachinnagpal/setestdemo/tree/master</url>
+    <tag>se-test-demo-1.2</tag>
   </scm>
   <distributionManagement>
     <snapshotRepository>
