--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.github.sachinnagpal</groupId>
   <artifactId>se-test-demo</artifactId>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.2</version>
   <packaging>jar</packaging>
   <name>se-test-demo</name>
   <url>https://github.com/sachinnagpal/setestdemo</url>
